# Global-Energy-Price-Data-Engineering-Platform-II

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: energy_pipeline_dag.py
app/config/: settings.py
app/database/: mongo.py
app/ingestion/: eia_client.py  fetch_energy_data.py  parser.py
app/loaders/: curated_loader.py  mongo.py  raw_loader.py
app/services/: pipeline.py  reporting.py
app/transformation/: energy_transformer.py  normalizer.py
app/utils/: constants.py  ids.py  logger.py
app/validation/: energy_validator.py  quality_checks.py
config/: settings.py
flask_app/: app.py
flask_app/routes/: api.py
flask_app/static/: styles.css
flask_app/templates/: dashboard.html
tests/: test_normalizer.py  test_validation.py
